css/style.css
html,
body {
	height: 100%;
	margin: 0;
	padding: 0;
}

#map {
	height: -webkit-calc(100% - 50px);
    height: -moz-calc(100% - 50px);
    height: calc(100% - 50px);
	width: 75%;
	margin: 0;
	position: absolute;
    top: 0;
    left: 0;
    margin-top: 50px;
}

/*Address suggestions box*/
.pac-container { 
	z-index:10000 !important;
}

#search {
	padding-top: 13px;
	margin: auto;
}

.alert {
	z-index: 999;
	position: relative;
	margin: 0;
	text-align: center;
}

.input-group {
	width: 500px;
	z-index: 9999 !important;
}

.list {
	background-color: white;
	width: 25%;
	position: absolute;
    top: 0;
    right: 0;
	height: -webkit-calc(100% - 50px);
    height: -moz-calc(100% - 50px);
    height: calc(100% - 50px);
    margin-top: 50px;
	overflow: auto;
}

.list ul {
	list-style: none;
	padding: 0;
}

.list li {
	padding: 10px;
	background: rgba(255,255,255,0.5);
	-webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
	-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
	box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
}

.list li img {
	float: left;
	margin: 0 15px 0 0;
}

.list li p {
	font-weight: 200; 
	font-size: 12px;
	line-height: 1.5 ;
	font-family: Georgia, serif;
}

.list li:hover {
	background: #90D1F3;
	cursor: pointer;
}

.logo {
	max-height: 100px;
	max-width: 100px;
}

.navbar-custom .icon-bar {
	background-color:#fff;
}

.navbar-custom {
	background-color: #168ccc;
    color:#fff;
}

.navbar-custom li>a:hover,.navbar-custom li>a:focus {
	background-color:#49bfff;
}

.navbar-custom a {
    color:#fefefe;
}

.navbar-custom .form-control:focus {
	border-color: #49bfff;
	outline: 0;
	-webkit-box-shadow: inset 0 0 0;
	box-shadow: inset 0 0 0;
}

@media only screen and (max-width : 480px) {
	#map {
		width: 100%;
	}

	.list {
		display: none;
		width: 50%;
	}

	.input-group {
	width: 100%;
}
}

@media only screen and (min-width : 768px) {
	#map {
		width: 75%;
	}

	.list {
		width: 25%;
		display: block;
	}
}

